Fixes to profile page

--- a/ronburgundyindex.html
+++ b/ronburgundyindex.html
@@ -4,7 +4,7 @@
     <meta name="description" content="Ron Burgundy's Programming Profile Page">
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
-    <link rel="stylesheet" href="ronburgundystyle.css"
+    <link rel="stylesheet" href="ronburgundystyle.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Inline+One&family=Roboto:wght@100&display=swap" rel="stylesheet">
